# Internet-Addiction-Cessation

./: Cargo.toml  README.md
.github/workflows/: test.yml
extra/: clash-provider.yaml
fixtures/: domains.toml  hosts.txt
src/: config.rs  file.rs  host_file.rs  lib.rs  main.rs  parser.rs
tests/: config_test.rs  file_test.rs  host_file_test.rs  integration_test.rs  parser_test.rs  test.sh
