[package]
name = "auto-domain-blocker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.14"
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
sudo = "0.6.0"
